# criterion-swarm

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
benches/: example_bench.rs
examples/: basic.rs
src/: cpu.rs  discovery.rs  lib.rs  output.rs  process.rs  runner.rs  tests.rs
