[package]
name = "criterion-swarm"
version = "0.2.0"
edition = "2021"
description = "Parallel criterion benchmark runner with CPU pinning and progress reporting"
license = "Apache-2.0"
repository = "https://github.com/jprendes/criterion-swarm"
readme = "README.md"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
clap = { version = "4", features = ["help"] }

[[bench]]
name = "example_bench"
harness = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["std"], default-features = false }
indicatif = "0.17"
tokio = { version = "1", features = ["rt", "process", "io-util", "sync", "macros"] }
ansi-replace = "0.1"
regex = "1"
serde_json = "1.0"
simple-pool = "0.0.18"
cpu-pin = { version = "0.1.3", features = ["tokio"] }
